# nsp-ntfy

./: .gitignore  CHANGELOG.md  README.md  config.json  nsp-ntfy.service  nsp-ntfy.sh  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: add-to-project.yml  build-and-test.yml  publish.yml
src/: application.py
src/app/: main.py
src/app/data/: data_classes.py
tests/: test_data_classes.py  test_main.py  test_nothing.py
