[metadata]
name = nsp-ntfy
version = 0.0.1
license = MIT
description = Monitor MQTT events and send configured notifications to ntfy.sh
long_description = file: README.md
author = Joseph McCarthy


[options]
packages = find:
package_dir =
    = ./
include_package_data = True
install_requires =


[options.packages.find]
where=./